# textiledesign-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  TODO  babel.cfg  deploy_to_server.py  messages.pot  pyproject.toml  requirements.txt  update-babel.txt  update_server.py
migrations/versions/: 0417230df4f5_remove_pattern_type_table.py  064d375308b1_add_string_based_pattern_type_column.py  09f229d79915_add_email_lower_to_user.py  8dde05ed9135_remove_obsolete_txgrouppattern_table.py  a1b2c3d4e5f6_add_messaging.py  a7b8c9d0e1f2_remove_support_group_data.py  a8b9c0d1e2f3_allow_duplicate_labels.py  b2c3d4e5f6a7_pattern_metadata_columns.py  b8c9d0e1f2a3_add_user_settings.py  b9c0d1e2f3a4_add_contents_salvage.py  c0d1e2f3a4b5_add_announcements.py  c1d2e3f4a5b6_add_user_usage_stats.py  c3d4e5f6a7b8_datetime_columns_to_timestamptz.py  cfa61cffb285_add_memberships_and_assignments.py  d1e2f3a4b5c6_add_group_public.py  d2e3f4a5b6c7_add_group_dates.py  d4e5f6a7b8c9_rename_superuser_and_investigation.py  e3f4a5b6c7d8_add_session_token_version.py  e5f6a7b8c9d0_investigation_origin_public.py  e7f8a9b0c1d2_add_group_owner_id.py  f6a7b8c9d0e1_add_password_reset_columns.py  f7a8b9c0d1e2_add_intro_seen.py  fd944d6ead69_add_user_date_fields.py
project/: .env-sample  .pre-commit-config.yaml  MANIFEST.in  requirements.txt  setup.cfg  setup.py
project/textileplatform/: __init__.py  admin.py  api.py  auth.py  babel_compile.sh  babel_extract.sh  beadpattern.py  db.py  main.py  messages.pot  model.py  models.py  name.py  palette.py  persistence.py  weavepattern.py
src/textileplatform/: __init__.py  api.py  app.py  babel.cfg  babel_extract.sh  beadexport.py  beadpattern.py  controller.py  ensure.py  export.py  exportcommon.py  mail.py  main.py  messages.pot  messaging.py  models.py  name.py  patterns.py  support.py  sysinfo.py  (+1 more)
tests/: conftest.py  test_security.py
(+108 files in other folders)
