[project]
name = "textileplatform"
version = "0.0.62"
description = "Textile Plattform Webapp"
authors = [
    {name="Damian Brunold", email="dab@dabsoft.ch"}
]
requires-python = ">=3.12"

dependencies = [
    "flask",
    "flask-babel",
    "flask-migrate",
    "flask-sqlalchemy",
    "python-dotenv",
    "postgres",
    "reportlab",
    "Pillow",
    "pre-commit",
    "flake8",
    "autopep8",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
