[project]
name = "textileplatform"
version = "1.0.35"
description = "Textile Plattform Webapp"
authors = [
    {name="Damian Brunold", email="dab@dabsoft.ch"}
]
requires-python = ">=3.12"

dependencies = [
    "flask",
    "flask-babel",
    "flask-limiter",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-wtf",
    "python-dotenv",
    "postgres",
    "reportlab",
    "Pillow",
    "psutil",
    "pre-commit",
    "flake8",
    "autopep8",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
